:white_check_mark: [#3] add persoon tests
